<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_color"
        android:icon="@drawable/outline_palette_24"
        android:title="@string/Color"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/id_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/Save" />
    <item
        android:id="@+id/id_line_width"
        android:icon="@drawable/outline_border_color_24"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/id_erase"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/id_clear"
        android:title="@string/clear" />
</menu>