<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/id_table_layout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <!-- Table Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_alpha" />

            <SeekBar
                android:id="@+id/id_alphaSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <!-- Table Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />

            <SeekBar
                android:id="@+id/id_redSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <!-- Table Row 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />

            <SeekBar
                android:id="@+id/id_greenSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <!-- Table Row 4 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />

            <SeekBar
                android:id="@+id/id_blueSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <View
            android:id="@+id/id_view_color"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/id_button_set_color"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>